# tsuzuri

./: .gitignore  .rustfmt.toml  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  spellcheck.dic
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
crates/tsuzuri/: CHANGELOG.md  Cargo.toml
crates/tsuzuri-dynamodb/: CHANGELOG.md  README.md
crates/tsuzuri/src/: aggregate.rs  aggregate_id.rs  command.rs  domain_event.rs  event_id.rs  event_store.rs  integration_event.rs  lib.rs  message.rs  persist.rs  sequence_number.rs  serde.rs  version.rs  versioned_aggregate.rs
crates/tsuzuri/src/command/: handler.rs  repository.rs
tsuzuri/: CHANGELOG.md  Cargo.toml  README.md
tsuzuri-dynamodb/: CHANGELOG.md  Cargo.toml  README_kinesis_local_debug.md
tsuzuri-dynamodb/src/: error.rs  lib.rs  projection.rs  store.rs
tsuzuri-dynamodb/src/integration/: event_type_router.rs  helpers.rs  kinesis.rs
tsuzuri-dynamodb/src/integration/kinesis/: lambda.rs  local.rs
tsuzuri-dynamodb/src/projection/: event_type_router.rs  helpers.rs  kinesis.rs
tsuzuri-dynamodb/src/projection/kinesis/: lambda.rs  local.rs
tsuzuri-dynamodb/src/store/: error.rs  helper.rs  key.rs
tsuzuri-dynamodb/tests/: README.md  config_test.rs  event_store_test.rs  inverted_index_test.rs  test_framework_example.rs
tsuzuri-dynamodb/tests/common/: fixtures.rs  mod.rs
tsuzuri-libsql/: Cargo.toml  README.md
tsuzuri-libsql/src/: config.rs  lib.rs  read.rs
tsuzuri/src/: aggregate.rs  command.rs  domain_event.rs  error.rs  event.rs  event_store.rs  helper.rs  integration_event.rs  inverted_index_store.rs  lib.rs  mem_store.rs  projection.rs  serde.rs  snapshot.rs  test.rs  versioned_aggregate.rs
tsuzuri/src/command/: repository.rs
tsuzuri/src/integration/: adapter.rs  error.rs  processor.rs
tsuzuri/src/projection/: adapter.rs  error.rs  processor.rs
