[package]
name = "tsuzuri-dynamodb"
version = "0.1.25"
categories = ["database", "data-structures", "development-tools"]
keywords = ["dynamodb", "aws", "database"]
authors = [
  "Yuki Tanaka <matakitanakajp@gmail.com>",
  "Yuki Tanaka <y-tanaka@ohmylike.jp>",
]
description = "DynamoDB integration for Tsuzuri"
repository = "https://github.com/mtjp9/tsuzuri"
homepage = "https://github.com/mtjp9/tsuzuri"
readme = "README.md"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = { workspace = true }

[dependencies]
tsuzuri = { path = "../tsuzuri", version = "0.1.2" }
tower = { version = "0.5" }
futures = { version = "0.3.31" }
async-trait = { version = "0.1.88" }
thiserror = { version = "2.0.12" }
tokio = { version = "1.45.1", features = ["full"] }
tracing = { version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_dynamo = { version = "4.2.14" }
chrono = { version = "0.4.40", features = ["serde"] }
http = { version = "1.3.1" }
aws-config = { version = "1.6.1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = { version = "1.80.0" }
aws_lambda_events = { version = "0.16.0", default-features = false, features = [
  "dynamodb",
  "kinesis",
] }
lambda_runtime = { version = "0.14.2" }
# aws-sdk-dynamodbstreams = { version = "1.22.0" }
aws-sdk-kinesis = { version = "1.70.0" }
aws-smithy-types-convert = { version = "0.60.9", features = [
  "convert-streams",
] }
aws-smithy-types = { version = "1.3.2" }
testcontainers = { version = "0.24.0" }
base64 = "0.22.1"

[dev-dependencies]
tokio-test = "0.4"
uuid = { version = "1.11", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
