[package]
name = "tsuzuri"

version.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
readme.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
ulid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = "1.0"
